# singly-rs

./: Cargo.toml
